--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://Ritishree-12.github.io/liveportfolio",
+  "homepage": "https://Ritishree-12.github.io/livemyportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
