--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://ritishree-12.github.io/livemyportfolio",
+  "homepage":"https://ritishree-12.github.io/livemyportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
