--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myportfolio",
-  "homepage":"https://ritishree-12.github.io/livemyportfolio",
-  "version": "0.1.1",
+  "homepage":"https://ritishree-12.github.io/home/livemyportfolio",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
