--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage":"https://ritishree-12.github.io/home/livemyportfolio",
+  "homepage":"https://ritishree-12.github.io/livemyportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
